--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -59,6 +59,19 @@
   right: 0;
 }
 
+.Opcoes {
+  display: flex;
+}
+
+.Paleta {
+  background: none;
+  border: none;
+}
+
+.Paleta__icone {
+  cursor: pointer;
+}
+
 @media (max-width: 1220px) {
   .Header {
     max-width: 720px;
@@ -69,7 +82,13 @@
   .Header {
     max-width: 320px;
   }
+  .row {
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+  }
 }
+
 
 @media (max-width: 400px) {
   .Header {
@@ -78,6 +97,10 @@
 
   .row {
     column-gap: 20px;
+  }
+
+  .Logo {
+    width: 100%;
   }
 
   .Logo__titulo {
